# emacs-libgit2

./: .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cask  LICENSE  Makefile  README.md  ROADMAP.org  gdb.el  libgit2-core-convert-types.c  libgit2-core.c  libgit2-core.h  libgit2-demo.el  libgit2-magit.el  libgit2.el
cli/: status.el
debug/: gdb-entry.el  gdb.sh  status.el
test/: branch-test.el  gdb-entry.el  gdb.sh  linking-test.el  magit-test.el  test-helper.el
