# CMake build script for emacs-libgit2

PROJECT(emacs-libgit2 C)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(CMAKE_POSITION_INDEPENDENT_CODE TRUE CACHE BOOL "pic" FORCE)
SET(BUILD_CLAR FALSE CACHE BOOL "clar" FORCE)
SET(BUILD_SHARED_LIBS FALSE CACHE BOOL "shared" FORCE)
SET(USE_SSH FALSE CACHE BOOL "shared" FORCE)
SET(LIBSSH2_FOUND FALSE CACHE BOOL "shared" FORCE)
SET(CMAKE_C_STANDARD 11)

if (CMAKE_BUILD_TYPE STREQUAL "Coverage")
    SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-g -O0 -fprofile-arcs -ftest-coverage")
ENDIF()

IF(APPLE)
  SET(CMAKE_SKIP_BUILD_RPATH  TRUE)
  SET(CMAKE_SHARED_LIBRARY_SUFFIX ".so")
ENDIF(APPLE)

ADD_SUBDIRECTORY(libgit2)
INCLUDE_DIRECTORIES(libgit2/include)

FILE(GLOB CORE_SOURCES *.c)
FILE(GLOB CORE_HEADERS *.h)
ADD_LIBRARY(git2-core SHARED ${CORE_SOURCES} ${CORE_HEADERS})

FIND_LIBRARY(git2 libgit2.a)
TARGET_LINK_LIBRARIES(git2-core c git2)

ADD_CUSTOM_COMMAND(
  OUTPUT include/emacs-module.h
  COMMAND curl -SL https://github.com/emacs-mirror/emacs/raw/master/src/emacs-module.h --create-dirs -o include/emacs-module.h)
ADD_CUSTOM_TARGET(curl_emacs_module DEPENDS include/emacs-module.h)
ADD_DEPENDENCIES(git2-core curl_emacs_module)

